Adds spacing to the homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,11 @@
       {{ partial "header.html" . }}
       {{ .Content }}
       {{ if gt (len ( where .Site.RegularPages "Section" "posts" )) 0 }}
-      <h3>Latest Post</h3>
+      <h3>Latest Posts</h3>
       <section>
         {{ range (first 3 (where .Site.RegularPages "Section" "posts" ).ByDate.Reverse) }}
           <p>
-            <time class="g time" datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat "2006-01-02" .Date }}</time>&nbsp;
+            <time class="g time" datetime="{{ dateFormat "01-02-2006" .Date }}">{{ dateFormat "01.02.2006" .Date }}</time>&nbsp;
             <a href="{{ .Permalink }}">{{ .Title }}</a>
           <p>
         {{ end }}
