--- a/assets/scss/_extra.scss
+++ b/assets/scss/_extra.scss
@@ -18,7 +18,32 @@ header p a:hover{
     text-decoration: none;
 }
 
-
 .list li {
     padding-bottom: 1rem;
+}
+
+.post-date {
+    margin-top: 0px;
+}
+
+.meta-info {
+    color: gray;
+}
+
+.post-title {
+    margin-bottom: .5rem;   
+}
+
+.back {
+    font-size: 14px;
+    margin-top: 1rem;
+}
+
+.back a {
+    text-decoration: none;
+    color: gray;
+}
+
+.back a:hover {
+    text-decoration: underline solid;
 }
