Updates some text

--- a/assets/scss/_extra.scss
+++ b/assets/scss/_extra.scss
@@ -48,3 +48,11 @@ header p a:hover{
 .back a:hover {
     text-decoration: underline solid;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.home-content {
+    margin-top: 4rem;
+}
