--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
       {{ partial "header.html" . }}
       {{ .Content }}
       {{ if gt (len ( where .Site.RegularPages "Section" "posts" )) 0 }}
-      <h3>Latest Posts</h3>
+      <h3 class="home-content">Latest Posts</h3>
       <section>
         {{ range (first 3 (where .Site.RegularPages "Section" "posts" ).ByDate.Reverse) }}
           <p>
