--- a/layouts/_default/admin.html
+++ b/layouts/_default/admin.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex" />
-    <title>Website | Admin Panel</title>
+    <title>Content Manager</title>
   </head>
   <body>
-    <script type="module" src="admin.js"></script>
+    <!-- Include the script that builds the page and powers Netlify CMS -->
+    <link rel="stylesheet" href="/admin/dark.css">
+    <script src="https://unpkg.com/decap-cms@3.1.0-beta.5/dist/decap-cms.js"></script>
   </body>
 </html>
