Adds docs and sample acccordion on FAQs

--- a/assets/scss/_extra.scss
+++ b/assets/scss/_extra.scss
@@ -56,3 +56,11 @@ header p a:hover{
 .home-content {
     margin-top: 4rem;
 }
+
+.docs-list {
+    list-style-type: none;
+    padding-left: 0px;
+}
+.docs-list li{
+    padding-bottom: 10px;
+}
