--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,8 @@
     <div class="content">
       {{ partial "header.html" . }}
       {{ .Content }}
-      {{ if gt (len ( where .Site.RegularPages "Section" "posts" )) 0 }}
-      <h3 class="home-content">Latest Posts</h3>
+      <!-- {{ if gt (len ( where .Site.RegularPages "Section" "posts" )) 0 }}
+      <h3 class="">Latest Posts</h3>
       <section>
         {{ range (first 3 (where .Site.RegularPages "Section" "posts" ).ByDate.Reverse) }}
           <p>
@@ -17,7 +17,7 @@
           <p>
         {{ end }}
       </section>
-      {{ end }}
+      {{ end }} -->
     </div>
   </main>
 </body>
