--- a/assets/scss/_extra.scss
+++ b/assets/scss/_extra.scss
@@ -57,10 +57,15 @@ header p a:hover{
     margin-top: 4rem;
 }
 
-.docs-list {
+.link-list {
     list-style-type: none;
     padding-left: 0px;
 }
-.docs-list li{
+.link-list li{
     padding-bottom: 10px;
+}
+
+.link-list p{
+    margin-top: 8px;
+    margin-left: 16px;
 }
